@@ -1,17 +1,17 @@
 {
-  "backup_data_uid": "394b518a52bedf07", 
-  "backup_module_uid": "b1e99f6461424276", 
-  "backup_module_uoa": "kernel", 
+  "backup_data_uid": "394b518a52bedf07",
+  "backup_module_uid": "b1e99f6461424276",
+  "backup_module_uoa": "kernel",
   "control": {
-    "engine": "CK", 
-    "iso_datetime": "2014-11-03T14:18:03.997000", 
-    "user_name": "cTuning foundation", 
+    "engine": "CK",
+    "iso_datetime": "2014-11-03T14:18:03.997000",
+    "user_name": "cTuning foundation",
     "version": [
-      "0", 
-      "1", 
-      "140810", 
+      "0",
+      "1",
+      "140810",
       "beta"
     ]
-  }, 
+  },
   "data_name": "default"
 }
