@@ -1,5 +1,7 @@
 {
- "install_to_env":"",
- "package_channel":"",
- "debug":""
+  "allowed_action_names": "^[A-Za-z_-]*$",
+  "allowed_entry_names": "^[A-Za-z0-9_@. -]*$",
+  "debug": "",
+  "install_to_env": "",
+  "package_channel": ""
 }
